# TryTask

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.e83d37b  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  taskwindow.cpp  taskwindow.h  taskwindow.ui
